# web-scraper

./: README.md  claude_desktop_config.example.json  claude_desktop_config.json  claude_desktop_mcp.py  client_example.py  main.py  mcp_manifest.json  mcp_protocol.py  minimal_requirements.txt  package.json  pyproject.toml  requirements.txt  server.py  simple_mcp_server.py  web_scraper.py  web_scraper_server.py
src/: index.ts  scraper.ts
