[project]
name = "web-scraper"
version = "0.1.0"
description = "MDN Web Documentation Scraper for LLM Applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.11.0",
]

[project.scripts]
mdn-scraper = "main:main"
